--- a/chiara/styles.css
+++ b/chiara/styles.css
@@ -3,8 +3,11 @@
     text-align: center;
 }
 
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.testocv {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.testocvs {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
 }
