--- a/niko/style.css
+++ b/niko/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
@@ -12,6 +12,8 @@ body {
     background-color: white;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid grey;
+    border-radius: 10px;
 }
 
 .header {
@@ -24,10 +26,19 @@ body {
 .profile-img {
     width: 120px;
     height: 120px;
-    border-radius: 10px;
+    border-radius: 12px;
     object-fit: cover;
     margin-right: 20px;
 }
+
+/* .blocchetto {
+    background-color: lime;
+    width: 130px;
+    height: 130px;
+    border-radius: 13px;
+    object-fit: cover;
+    margin-right: 20px;
+} */
 
 .header-text h1 {
     margin: 0;
@@ -41,7 +52,7 @@ body {
     color: #555;
 }
 
-.header-text p {
+.header-text h3 {
     margin: 5px 0;
     font-size: 14px;
     color: #777;
@@ -53,6 +64,7 @@ body {
 
 section {
     margin-bottom: 20px;
+    width: 50%;
 }
 
 h3 {
